# tispace

./: .gitignore  404.html  Cargo.toml  Dockerfile  Makefile  README.md  index.html  intro.html  print.html  rust-toolchain  rust-toolchain.toml  searchindex.js  searchindex.json  toc.html  toc.js
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml  gh-pages.yml  gh-preview.yaml  publish.yml
app/: .babelrc.js  .env.local.sample  .eslintrc.json  .gitignore  .stylelintrc.json  README.md  app.json  externals.d.ts  next.config.js  package.json  tsconfig.json
app/components/: addInstanceModal.tsx  footer.tsx  header.tsx  instance.tsx  layout.tsx  modal.tsx  updateInstanceModal.tsx
app/lib/: service.ts
app/lib/service/: index.ts  instanceService.ts
app/pages/: _app.tsx  index.tsx  login.tsx
app/pages/api/auth/: [...nextauth].ts
app/server/: index.ts
app/styles/: Footer.module.less  Home.module.less  Layout.module.less  Login.module.less  footer.module.less  header.module.less  index.module.less  login.module.less
app/types/: three.d.ts
configs/cluster/: backend.yaml  frontend.yaml  ingress.yaml  init-rootfs.yaml  runc-runtimeclass.yaml  runtime.yaml  server_deployment.yaml  server_pvc.yaml  server_rbac.yaml  server_service.yaml
configs/examples/: backend-env.example.yaml  frontend-env.example.yaml  google-client-id.example.yaml  google-client.example.yaml  lxd-client-cert.example.yaml  tispace-tls.example.yaml
deployments/backend/: Dockerfile
deployments/frontend/: Dockerfile
deployments/rootfs/: Dockerfile.centos7
docs/: book.toml
docs/src/: intro.md
images/: Dockerfile.ubuntu20.04
rootfs/dockerfiles/: Dockerfile.centos7  Dockerfile.centos8  Dockerfile.ubuntu2004
scripts/: init-rootfs.sh
src/: auth.rs  collector.rs  dto.rs  env.rs  error.rs  lib.rs  main.rs  model.rs  operator.rs  operator_k8s.rs  operator_lxd.rs  scheduler.rs  service.rs  storage.rs
