[package]
name = "tispace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.9.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
url = { version = "2", features = ["serde"] }
percent-encoding = "2.1.0"
rust-crypto = "^0.2"

