[package]
name = "tispace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "^0.2"
headers = "0.3"
jsonwebtoken = "7"
once_cell = "1.8"
thiserror = "1"

