[package]
name = "tispace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headers = "0.3"
once_cell = "1.9"
thiserror = "1"
kube = { version = "0.67", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
anyhow = { version = "1.0" }
# FIXME: Don't use it again when 0.4 is released.
google-signin = { git = "https://github.com/hi-rustin/google-signin-rs" }
rand = "0.8.4"
either = "1.6"
regex = "1.5"
